Cambiada estructura HTML y estilos

--- a/www/index.html
+++ b/www/index.html
@@ -39,11 +39,12 @@
 
 <body>
     <div class="app">
-        <div class="foto" id="foto">
-            <button type="button" id="btnFoto">Hacer foto!</button>
+        <div class="foto">
             <div id="imagen"></div>
+
         </div>
-        <div class="flash" id="flash">
+        <div class="botones">
+            <button type="button" id="btnFoto">Capturar Imagen</button>
             <button type="button" id="btnFlash">Encender flash</button>
         </div>
     </div>
